# zarr_benchmarks

./: README.md  generate_benchmark_array.rs  justfile  pyproject.toml
measurements/: benchmark_read_all.csv  benchmark_read_all.md  benchmark_read_chunks.csv  benchmark_read_chunks.md  benchmark_read_inner_chunks.csv  benchmark_read_inner_chunks.md  benchmark_read_subchunks.csv  benchmark_roundtrip.csv  benchmark_roundtrip.md
src/zarr_benchmarks/: plot_benchmarks.py  run_benchmark_read_all.py  run_benchmark_read_chunks.py  run_benchmark_read_inner_chunks.py  run_benchmark_read_subchunks.py  run_benchmark_roundtrip.py  tensorstore_python_benchmark_read.py  zarr_python_benchmark_read.py  zarrs_python_benchmark_read.py
